Fri Feb 26 11:10:19 2016  Rick Salevsky  <rsalevsky@suse.com>

	* lib/tmpdir.rb: Unify to coding-style for method definition.
	  [fix GH-1252]

Fri Feb 26 11:02:04 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* README.md: update markdown syntax for anchor tag.
	  [fix GH-1265] Patch by @lukBarros

Fri Feb 26 10:52:29 2016  Alex Boyd  <alex@opengroove.org>

	* lib/irb.rb: avoid to needless truncation when using back_trace_limit option.
	  [fix GH-1205][ruby-core:72773][Bug #11969]

Fri Feb 26 08:11:58 2016  Aaron Patterson <tenderlove@ruby-lang.org>

	* gem_prelude.rb: Reduce system calls by activating the `did_you_mean`
	  gem before requiring the gem.  Activating the gem puts the gem on
	  the load path, where simply requiring the file will search every gem
	  that's installed until it can find a gem that contains the
	  `did_you_mean` file.

Thu Feb 25 19:04:13 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb: Adding possibility for debugging output
	  for TitleCase table in casefold.h.
	  (with Kimihito Matsui)

Wed Feb 24 22:31:13 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* include/ruby/oniguruma.h: Rearranging flag assignments and making
	  space for titlecase indices; adding additional macros to add or
	  extract titlecase index; adding comments for better documentation.
	* enc/unicode.c: Moving some macros to include/ruby/oniguruma.h;
	  activating use of titlecase indices.
	  (with Kimihito Matsui)

Wed Feb 24 21:03:04 2016  Tanaka Akira  <akr@fsij.org>

	* random.c (limited_rand): Add a specialized path for when the limit fits
	  in 32 bit.

Tue Feb 23 21:52:24 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb, casefold.h: Outputting actual titlecase
	  data (new table, with indices from other tables).
	* enc/unicode.c: Ignoring titlecase data indices for the moment.
	  (with Kimihito Matsui)

Tue Feb 23 15:21:14 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
