@@ -13,8 +13,6 @@ module XMLRPC # :nodoc:
 
     # === Available parsers
     #
-    # * XMLParser::NQXMLTreeParser
-    # * XMLParser::NQXMLStreamParser
     # * XMLParser::XMLTreeParser
     # * XMLParser::XMLStreamParser (fastest)
     # * XMLParser::REXMLStreamParser
